# ai-desktop-ui

./: .gitignore  AGENT.md  README.md  RELEASE_NOTES.md  index.html  package.json  pnpm-lock.yaml  update.json
ai-backend/: .env.example  main.py  pyproject.toml
ai-backend/core/: config.py  database.py
ai-backend/pyinstaller/: build.spec
ai-backend/routers/: chat.py  health.py  knowledge.py  models.py  settings.py
ai-backend/services/: document.py  llm.py  model_provider.py  rag.py
docs/: API_SPEC.md  ARCHITECTURE.md  DATA_SPEC.md  DEVELOPMENT.md  FEATURE_SPEC.md  PACKAGING.md  PROJECT_SPEC.md  README.md
scripts/: build-all.ps1  build-backend.ps1  dev.ps1  package-windows.ps1
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.bundle.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/chat/: Composer.tsx  ContextPanel.tsx  MarkdownContent.tsx  MessageThread.tsx  SessionList.tsx  types.ts
src/components/history/: HistoryFilter.tsx  HistoryList.tsx  HistoryToolbar.tsx
src/components/knowledge/: KnowledgeList.tsx  KnowledgeSummary.tsx  KnowledgeToolbar.tsx  PermissionMatrix.tsx
src/components/layout/: Sidebar.tsx
src/components/model/: ModelConfigGrids.tsx  ModelSummary.tsx  ModelTable.tsx  ProviderPanel.tsx
src/contexts/: ThemeContext.tsx
src/pages/: ChatPage.tsx  HistoryPage.tsx  KnowledgePage.tsx  ModelPage.tsx  SettingsPage.tsx
src/services/: api.ts
src/styles/: global.css
src/types/: chat.ts  history.ts  knowledge.ts  model.ts
